# CalibTool

./: CMakeLists.txt  README.md
include/: DecodeCardSdk.h  HCNetSDK.h  definition.h
src/: main.cpp
